{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 55,
  "lineage": "dd065c50-5d01-23a6-2f6b-ebbc5112897d",
  "resources": [
    {
      "module": "module.bastion_host",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "dg-subnet-devs",
      "provider": "module.bastion_host.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4b859b53-281d-4b35-9887-9b7a17015e78/resourceGroups/dev_dg_rg1/providers/Microsoft.Network/virtualNetworks/dg-vnet-1/subnets/dg-subnet-dev-1",
            "name": "dg-subnet-dev-1",
            "resource_group_name": "dev_dg_rg1",
            "virtual_network_name": "dg-vnet-1"
          }
        }
      ]
    },
    {
      "module": "module.bastion_host",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "dg-vnets",
      "provider": "module.bastion_host.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "95271b8f-2272-4244-959c-3b864ec4996a",
            "id": "/subscriptions/4b859b53-281d-4b35-9887-9b7a17015e78/resourceGroups/dev_dg_rg1/providers/Microsoft.Network/virtualNetworks/dg-vnet-1",
            "location": "eastus2",
            "name": "dg-vnet-1",
            "resource_group_name": "dev_dg_rg1",
            "subnets": [
              "dg-subnet-dev-1"
            ]
          }
        }
      ]
    },
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion_host_linuxvm_nic",
      "provider": "module.bastion_host.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4b859b53-281d-4b35-9887-9b7a17015e78/resourceGroups/dev_dg_rg1/providers/Microsoft.Network/networkInterfaces/Ops-dev-bastion-host-linuxvm-nic",
            "internal_domain_name_suffix": "r2nspflsejceffm2hode3reznc.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "bastion-host-ip-1",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4b859b53-281d-4b35-9887-9b7a17015e78/resourceGroups/dev_dg_rg1/providers/Microsoft.Network/publicIPAddresses/Ops-dev-bastion-host-publicip",
                "subnet_id": "/subscriptions/4b859b53-281d-4b35-9887-9b7a17015e78/resourceGroups/dev_dg_rg1/providers/Microsoft.Network/virtualNetworks/dg-vnet-1/subnets/dg-subnet-dev-1"
              }
            ],
            "location": "eastus2",
            "name": "Ops-dev-bastion-host-linuxvm-nic",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "dev_dg_rg1"
          },
          "dependencies": [
            "module.bastion_host.azurerm_public_ip.bastion_host_publicip",
            "module.bastion_host.data.azurerm_resource_group.dg_rg",
            "module.bastion_host.data.azurerm_subnet.dg-subnet-devs"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_subnet_nsg",
      "provider": "module.bastion_host.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4b859b53-281d-4b35-9887-9b7a17015e78/resourceGroups/dev_dg_rg1/providers/Microsoft.Network/networkSecurityGroups/dg-subnet-dev-1-nsg",
            "location": "eastus2",
            "name": "dg-subnet-dev-1-nsg",
            "resource_group_name": "dev_dg_rg1",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion_host.data.azurerm_resource_group.dg_rg",
            "module.bastion_host.data.azurerm_subnet.dg-subnet-devs"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion_nsg_rule_inbound",
      "provider": "module.bastion_host.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4b859b53-281d-4b35-9887-9b7a17015e78/resourceGroups/dev_dg_rg1/providers/Microsoft.Network/networkSecurityGroups/dg-subnet-dev-1-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "dg-subnet-dev-1-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "dev_dg_rg1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion_host.azurerm_network_security_group.bastion_subnet_nsg",
            "module.bastion_host.data.azurerm_resource_group.dg_rg",
            "module.bastion_host.data.azurerm_subnet.dg-subnet-devs"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4b859b53-281d-4b35-9887-9b7a17015e78/resourceGroups/dev_dg_rg1/providers/Microsoft.Network/networkSecurityGroups/dg-subnet-dev-1-nsg/securityRules/Rule-Port-3389",
            "name": "Rule-Port-3389",
            "network_security_group_name": "dg-subnet-dev-1-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "dev_dg_rg1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion_host.azurerm_network_security_group.bastion_subnet_nsg",
            "module.bastion_host.data.azurerm_resource_group.dg_rg",
            "module.bastion_host.data.azurerm_subnet.dg-subnet-devs"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_host_publicip",
      "provider": "module.bastion_host.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/4b859b53-281d-4b35-9887-9b7a17015e78/resourceGroups/dev_dg_rg1/providers/Microsoft.Network/publicIPAddresses/Ops-dev-bastion-host-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.22.230.40",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "Ops-dev-bastion-host-publicip",
            "resource_group_name": "dev_dg_rg1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.bastion_host.data.azurerm_resource_group.dg_rg"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion_subnet_nsg_associate",
      "provider": "module.bastion_host.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4b859b53-281d-4b35-9887-9b7a17015e78/resourceGroups/dev_dg_rg1/providers/Microsoft.Network/virtualNetworks/dg-vnet-1/subnets/dg-subnet-dev-1",
            "network_security_group_id": "/subscriptions/4b859b53-281d-4b35-9887-9b7a17015e78/resourceGroups/dev_dg_rg1/providers/Microsoft.Network/networkSecurityGroups/dg-subnet-dev-1-nsg",
            "subnet_id": "/subscriptions/4b859b53-281d-4b35-9887-9b7a17015e78/resourceGroups/dev_dg_rg1/providers/Microsoft.Network/virtualNetworks/dg-vnet-1/subnets/dg-subnet-dev-1"
          },
          "dependencies": [
            "module.bastion_host.azurerm_network_security_group.bastion_subnet_nsg",
            "module.bastion_host.azurerm_network_security_rule.bastion_nsg_rule_inbound",
            "module.bastion_host.data.azurerm_resource_group.dg_rg",
            "module.bastion_host.data.azurerm_subnet.dg-subnet-devs"
          ]
        }
      ]
    }
  ]
}